[package]
name = "led"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.17.0", features = ["v4", "serde"] }
anyhow = "1.0.98"                                         # For generating unique identifiers
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
eframe = "0.32.0"
saran = { path = "../saran" }                             # Saran library
mlua = { version = "0.9.0", features = ["lua54"] }        # Lua 5.4 support
egui = "0.32.0"
rfd = "0.15.4"
